<resources>

    <string name="app_name">TourInf</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_places_activity">Your Nearest Places</string>
    <string name="mainTitle">TourInf</string>
    <string name="startButton">Use Current Location</string>
    <string name="title_activity_main">TourInf</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="text_box">Enter City, Town, Post Code</string>
    <string name="places_button">Show All Places on a Map</string>
    <string name="pop_up">pop up</string>
    <string name="single_place_name">Name:</string>
    <string name="single_place_address">Address:</string>
    <string name="single_place_map">Show on Map</string>
    <string name="go_to_website">Go to Website</string>
    <string name="call_place">Call</string>
    <string name="title_activity_map">Place Location</string>
    <string name="map">MAP!</string>
    <string name="map_not_ready">MAP NOT READY!</string>
    <string name="get_directions">Get Directions</string>
    <string name="searchButton">Go!</string>
    <string name="enterLocation">Enter Town or City&#8230;</string>
    <string name="place_image">Place Image</string>

</resources>